--- a/slime-killer.html
+++ b/slime-killer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Forest Walking Simulator with Rock Throwing</title>
+    <title>Slime Killer - A Game Made By viztini</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
